<resources>
    <string name="app_name">Submission GitHub</string>
    <string name="search">Cari</string>
    <string name="search_hint">Cari Pengguna</string>
    <string name="avatar">avatar</string>
    <string name="username">Username</string>
    <string name="followers">Pengikut</string>
    <string name="following">Mengikuti</string>
    <string name="repository">Repository</string>
    <string name="company">Perusahaan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>