<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintLeft_toLeftOf="@+id/img_avatar"
        app:layout_constraintRight_toRightOf="@+id/img_avatar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="152dp"
        tools:text="@tools:sample/first_names" />

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:textStyle="normal"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintLeft_toLeftOf="@+id/img_avatar"
        app:layout_constraintRight_toRightOf="@+id/img_avatar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="179dp"
        tools:text="@string/company" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:textStyle="normal"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintLeft_toLeftOf="@+id/img_avatar"
        app:layout_constraintRight_toRightOf="@+id/img_avatar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="208dp"
        tools:text="@tools:sample/cities[1]" />

    <TextView
        android:id="@+id/repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:textStyle="normal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="240dp"
        tools:text="@string/repository" />

    <TextView
        android:id="@+id/totalrepository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:textStyle="normal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="269dp"
        tools:text="@tools:sample/us_zipcodes" />

    <TextView
        android:id="@+id/total_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:textStyle="normal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="240dp"
        tools:text="@string/followers" />

    <TextView
        android:id="@+id/totalfollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:textStyle="normal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="269dp"
        tools:text="@tools:sample/us_zipcodes" />

    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:textStyle="normal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="254dp"
        tools:layout_editor_absoluteY="240dp"
        tools:text="@string/following" />

    <TextView
        android:id="@+id/totalfollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:textStyle="normal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="266dp"
        tools:layout_editor_absoluteY="269dp"
        tools:text="@tools:sample/us_zipcodes" />

</androidx.constraintlayout.widget.ConstraintLayout>