<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="4dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/img_avatar"
        app:layout_constraintRight_toRightOf="@id/img_avatar"
        app:layout_constraintTop_toBottomOf="@+id/img_avatar"
        tools:text="@tools:sample/first_names" />


    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        app:layout_constraintLeft_toLeftOf="@id/username"
        app:layout_constraintRight_toRightOf="@id/username"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:text="@tools:sample/full_names" />


    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        app:layout_constraintLeft_toLeftOf="@id/company"
        app:layout_constraintRight_toRightOf="@id/company"
        app:layout_constraintTop_toBottomOf="@+id/company"
        tools:text="@tools:sample/cities" />


    <TextView
        android:id="@+id/total_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintLeft_toLeftOf="@id/repository"
        app:layout_constraintRight_toRightOf="@id/repository"
        app:layout_constraintTop_toBottomOf="@+id/location"
        tools:text="@tools:sample/us_zipcodes" />

    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="238dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repository"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="238dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="238dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/total_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintLeft_toLeftOf="@id/followers"
        app:layout_constraintRight_toRightOf="@id/followers"
        app:layout_constraintTop_toBottomOf="@+id/location"
        tools:text="@tools:sample/us_zipcodes" />

    <TextView
        android:id="@+id/total_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintLeft_toLeftOf="@id/following"
        app:layout_constraintRight_toRightOf="@id/following"
        app:layout_constraintTop_toBottomOf="@+id/location"
        tools:text="@tools:sample/us_zipcodes" />

</androidx.constraintlayout.widget.ConstraintLayout>